Struct refactor