@@ -1,7 +1,16 @@
 package org.webgpu.generator.generators;
 
 import javax.lang.model.element.Modifier;
+
+import java.lang.foreign.MemorySegment;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.SequencedCollection;
+import java.util.ServiceLoader;
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -15,10 +24,8 @@ import com.palantir.javapoet.CodeBlock;
 import com.palantir.javapoet.FieldSpec;
 import com.palantir.javapoet.JavaFile;
 import com.palantir.javapoet.MethodSpec;
-import com.palantir.javapoet.ParameterSpec;
 import com.palantir.javapoet.TypeName;
 import com.palantir.javapoet.TypeSpec;
-import com.palantir.javapoet.WildcardTypeName;
 
 public class StructGenerator {
 
@@ -26,6 +33,7 @@ public class StructGenerator {
     private final String packageName;
 
     private static final Logger logger = LoggerFactory.getLogger(StructGenerator.class);
+    private static final String COMMON_STRUCT = "WGPUStruct";
 
     public StructGenerator(YamlModel yamlModel, String packageName) {
         this.yamlModel = yamlModel;
@@ -37,48 +45,43 @@ public class StructGenerator {
         yamlModel.getStructs().forEach(e -> logger.info("Generated struct: {}", e.getName()));
 
         // Build a map of parent struct name to list of child structs that extend it
-        java.util.Map<String, List<GpuStruct>> parentToChildrenMap = new java.util.HashMap<>();
+        Map<String, List<GpuStruct>> parentToChildrenMap = new HashMap<>();
         yamlModel.getStructs().forEach(struct -> {
             for (String parentName : struct.getExtends()) {
-                parentToChildrenMap.computeIfAbsent(parentName, k -> new java.util.ArrayList<>()).add(struct);
+                parentToChildrenMap.computeIfAbsent(parentName, k -> new ArrayList<>()).add(struct);
             }
         });
 
-        return yamlModel.getStructs().stream().map(e -> {
+        final var javaFiles = yamlModel.getStructs().stream().map(e -> {
             List<GpuStruct> children = parentToChildrenMap.getOrDefault(e.getName(), List.of());
             return generateStructClass(e, children);
-        }).map(ts -> JavaFile.builder(packageName, ts).build()).toList();
+        }).map(ts -> JavaFile.builder(packageName, ts).build()).collect(Collectors.toList());
+
+        javaFiles.add(JavaFile.builder(packageName, generateStructInterface(yamlModel.getStructs())).build());
+
+        return javaFiles;
 
     }
 
-    private TypeSpec generateStructRecord(GpuStruct e) {
-        TypeSpec.Builder structSpecBuilder = TypeSpec.recordBuilder(Utils.toPascalCase(e.getName()));
-        if (e.getDoc() != null) {
-            structSpecBuilder.addJavadoc(e.getDoc());
+    private TypeSpec generateStructInterface(List<GpuStruct> structs) {
+        logger.info("Building: " + COMMON_STRUCT);
+        var typeSpecBuild = TypeSpec.interfaceBuilder(COMMON_STRUCT);
+        typeSpecBuild.addModifiers(Modifier.PUBLIC, Modifier.SEALED);
+        for (GpuStruct struct : structs) {
+            typeSpecBuild.addPermittedSubclass(Utils.map(Utils.toPascalCase(struct.getName())));
         }
-
-        MethodSpec.Builder constructorBuilder = MethodSpec.constructorBuilder();
-        for (Member f : e.getMembers()) {
-            final ParameterSpec.Builder parameterSpecBuilder = ParameterSpec
-                    .builder(Utils.map(f.getType()), Utils.toCamelCase(f.getName()));
-            if (f.getDoc() != null) {
-                parameterSpecBuilder.addJavadoc(f.getDoc());
-            }
-                    
-            constructorBuilder.addParameter(
-                    parameterSpecBuilder.build());
-        }
-
-        structSpecBuilder.recordConstructor(constructorBuilder.build());
-        structSpecBuilder.addModifiers(Modifier.PUBLIC);
-        return structSpecBuilder.build();
+        logger.info("{}", typeSpecBuild.build());
+        return typeSpecBuild.build();
     }
 
-    private TypeSpec generateStructClass(GpuStruct e, List<GpuStruct> children) {
+    private TypeSpec generateStructClass(GpuStruct e, SequencedCollection<GpuStruct> children) {
         final TypeSpec.Builder structSpecBuilder = TypeSpec.classBuilder(Utils.toPascalCase(e.getName()));
         if (e.getDoc() != null) {
             structSpecBuilder.addJavadoc(e.getDoc());
         }
+
+        structSpecBuilder.addSuperinterfaces(Collections.singleton(Utils.map(COMMON_STRUCT)));
+        structSpecBuilder.addField(FieldSpec.builder(MemorySegment.class, "memorySegment", Modifier.PRIVATE, Modifier.FINAL).build());
 
         // If this struct is extended by other structs, make it sealed
         if (!children.isEmpty()) {
@@ -88,57 +91,39 @@ public class StructGenerator {
                     .map(child -> ClassName.get(packageName, Utils.toPascalCase(child.getName())))
                     .toList();
             structSpecBuilder.addPermittedSubclasses(permittedClasses);
-        } else if (!e.getExtends().isEmpty()) {
-            // If this struct extends a sealed class and has no children, mark it as final
-            // (if it has children, it will be processed as sealed in the if block above)
+        } else {
             structSpecBuilder.addModifiers(Modifier.FINAL);
         }
 
-        e.getExtends().forEach(ext -> {
-            structSpecBuilder.superclass(ClassName.get(packageName, Utils.toPascalCase(ext)));
-        });
+        e.getExtends()
+                .forEach(ext -> structSpecBuilder.superclass(ClassName.get(packageName, Utils.toPascalCase(ext))));
 
-        MethodSpec.Builder constructorBuilder = MethodSpec.constructorBuilder();
-        constructorBuilder.addModifiers(Modifier.PUBLIC);
-        for (Member f : e.getMembers()) {
-            final ParameterSpec.Builder parameterSpecBuilder = ParameterSpec
-                    .builder(Utils.map(f.getType()), Utils.toCamelCase(f.getName()));
-            if (f.getDoc() != null) {
-                parameterSpecBuilder.addJavadoc(f.getDoc());
-            }
 
-            constructorBuilder.addParameter(
-                    parameterSpecBuilder.build());
-        }
 
-        
+        structSpecBuilder.addMethod(this.defaultConstructor(""));
+        structSpecBuilder.addField(addProvider(e.getName()));
+        structSpecBuilder.addMethods(getterAndSetters(e));
 
-        structSpecBuilder.addMethod(constructorBuilder.build());
+        final var toStringMethod = generateToString(e);
+        structSpecBuilder.addMethod(toStringMethod);
 
-        if (!e.getMembers().isEmpty()) {
-            MethodSpec.Builder defaultConstructorBuilder = MethodSpec.constructorBuilder()
-                    .addModifiers(Modifier.PUBLIC);
-            
-            CodeBlock.Builder initBlock = CodeBlock.builder();
-            e.getMembers().forEach(m -> {
-                String fieldName = Utils.toCamelCase(m.getName());
-                TypeName fieldType = Utils.map(m.getType());
-                addDefaultAssignment(initBlock, fieldName, fieldType);
-            });
-            
-            defaultConstructorBuilder.addCode(initBlock.build());
-            structSpecBuilder.addMethod(defaultConstructorBuilder.build());
-        }
+        structSpecBuilder.addModifiers(Modifier.PUBLIC);
+        return structSpecBuilder.build();
+    }
+
+    private void addingFields(GpuStruct e, final TypeSpec.Builder structSpecBuilder) {
         // Adding Fields.
         e.getMembers().forEach(m -> {
             final FieldSpec field = FieldSpec
                     .builder(Utils.map(m.getType()), Utils.toCamelCase(m.getName()), Modifier.PRIVATE)
                     // .initializer(CodeBlock.of("new $T()", Utils.map(m.getType())))
                     .build();
-            
+
             structSpecBuilder.addField(field);
         });
+    }
 
+    private void oldAddGettersAndSetters(GpuStruct e, final TypeSpec.Builder structSpecBuilder) {
         // Adding getters
         e.getMembers().forEach(m -> {
             final MethodSpec.Builder methodBuilder = MethodSpec.methodBuilder(Utils.toCamelCase(m.getName()))
@@ -157,47 +142,25 @@ public class StructGenerator {
             methodBuilder.addStatement("this.$N = $N", Utils.toCamelCase(m.getName()), Utils.toCamelCase(m.getName()));
             structSpecBuilder.addMethod(methodBuilder.build());
         });
+    }
+    
+    public FieldSpec addProvider(String name) {
+        final ClassName providerName = ClassName.get(packageName + ".spi", Utils.toPascalCase(name) + "Provider");
+        final ClassName registry = ClassName.get(packageName + ".spi", "StructProviderRegistry");
+        final var builder = FieldSpec.builder(providerName, "PROVIDER", Modifier.PRIVATE, Modifier.STATIC,
+                Modifier.FINAL);
+        builder.initializer("$T.load($T.class).findFirst().orElseThrow().get($T.class)", ServiceLoader.class, registry,
+                providerName);
 
-        // Adding toString method
-        MethodSpec.Builder toStringBuilder = MethodSpec.methodBuilder("toString")
-                .addModifiers(Modifier.PUBLIC)
-                .returns(String.class)
-                .addAnnotation(Override.class);
-
-        String className = Utils.toPascalCase(e.getName());
-        StringBuilder code = new StringBuilder("return \"$L[\"");
-        List<Object> args = new java.util.ArrayList<>();
-        args.add(className);
-        
-        boolean first = true;
-        for (Member m : e.getMembers()) {
-            String fieldName = Utils.toCamelCase(m.getName());
-            if (!first) {
-                code.append(" + \", \" + \"$L=\" + $N()");
-                args.add(fieldName);
-                args.add(fieldName);
-            } else {
-                code.append(" + \"$L=\" + $N()");
-                args.add(fieldName);
-                args.add(fieldName);
-            }
-            first = false;
-        }
-        code.append(" + \"]\";");
-        
-        toStringBuilder.addCode(CodeBlock.of(code.toString(), args.toArray()));
-        structSpecBuilder.addMethod(toStringBuilder.build());
-
-        structSpecBuilder.addModifiers(Modifier.PUBLIC);
-        return structSpecBuilder.build();
+        return builder.build();
     }
 
     private void addDefaultAssignment(CodeBlock.Builder initBlock, String fieldName, TypeName fieldType) {
         if (fieldType.isPrimitive()) {
             if (fieldType.equals(TypeName.BOOLEAN)) {
                 initBlock.addStatement("this.$N = false", fieldName);
-            } else if (fieldType.equals(TypeName.BYTE) || fieldType.equals(TypeName.SHORT) || 
-                       fieldType.equals(TypeName.INT) || fieldType.equals(TypeName.LONG)) {
+            } else if (fieldType.equals(TypeName.BYTE) || fieldType.equals(TypeName.SHORT) ||
+                    fieldType.equals(TypeName.INT) || fieldType.equals(TypeName.LONG)) {
                 initBlock.addStatement("this.$N = 0", fieldName);
             } else if (fieldType.equals(TypeName.FLOAT)) {
                 initBlock.addStatement("this.$N = 0.0f", fieldName);
@@ -214,8 +177,81 @@ public class StructGenerator {
             // For String, use empty string
             initBlock.addStatement("this.$N = \"\"", fieldName);
         } else {
-            // For all other reference types (enums, abstract classes, interfaces, etc.), use null
+            // For all other reference types (enums, abstract classes, interfaces, etc.),
+            // use null
             initBlock.addStatement("this.$N = null", fieldName);
         }
+    }
+   
+
+    public MethodSpec defaultConstructor(String doc) {
+        return MethodSpec.constructorBuilder()
+                .addJavadoc(doc)
+                .addModifiers(Modifier.PUBLIC)
+                .addCode(CodeBlock.builder()
+                        .add("this.memorySegment = $N.initializer();", "PROVIDER").build())
+                .build();
+    }
+
+    public MethodSpec wrapperConstructor(String doc) {
+        return MethodSpec.constructorBuilder().addJavadoc(doc).build();
+    }
+
+    public List<MethodSpec> getterAndSetters(final GpuStruct gpuStruct) {
+        final List<MethodSpec> methods = new ArrayList<>(gpuStruct.getMembers().size() * 2);
+
+        for (GpuStruct.Member member : gpuStruct.getMembers()) {
+            final var getterSpecBuilder = MethodSpec.methodBuilder(Utils.toCamelCase(member.getName()));
+            getterSpecBuilder.addModifiers(Modifier.PUBLIC);
+            getterSpecBuilder.returns(Utils.map(member.getType()));
+            getterSpecBuilder.addJavadoc(member.getDoc());
+            getterSpecBuilder.addCode(CodeBlock.of("return PROVIDER.$L(this.memorySegment);", Utils.toCamelCase(member.getName())));
+
+            methods.add(getterSpecBuilder.build());
+
+            final var setterSpecBuilder = MethodSpec.methodBuilder(Utils.toCamelCase(member.getName()));
+            setterSpecBuilder.addModifiers(Modifier.PUBLIC);
+            setterSpecBuilder.addParameter(Utils.map(member.getType()), Utils.toCamelCase(member.getName()));
+            setterSpecBuilder.addJavadoc(member.getDoc());
+            setterSpecBuilder.addCode(
+                    CodeBlock.of("PROVIDER.$L(this.memorySegment, $L);", Utils.toCamelCase(member.getName()), Utils.toCamelCase(member.getName())));
+
+            methods.add(setterSpecBuilder.build());
+        }
+
+        return methods;
+    }
+
+    public MethodSpec generateToString(GpuStruct gpuStruct) {
+        // Adding toString method
+        MethodSpec.Builder toStringBuilder = MethodSpec.methodBuilder("toString")
+                .addModifiers(Modifier.PUBLIC)
+                .returns(String.class)
+                .addAnnotation(Override.class);
+
+        String className = Utils.toPascalCase(gpuStruct.getName());
+        StringBuilder code = new StringBuilder("return \"$L[\"");
+        List<String> args = new ArrayList<>();
+        args.add(className);
+
+        boolean first = true;
+        for (Member m : gpuStruct.getMembers()) {
+            String fieldName = Utils.toCamelCase(m.getName());
+            if (!first) {
+                code.append(" + \", \" + \"$L=\" + $N()");
+                args.add(fieldName);
+                args.add(fieldName);
+            } else {
+                code.append(" + \"$L=\" + $N()");
+                args.add(fieldName);
+                args.add(fieldName);
+            }
+            first = false;
+        }
+        code.append(" + \"]\";");
+
+        toStringBuilder.addCode(CodeBlock.of(code.toString(), args.toArray()));
+
+        return toStringBuilder.build();
     }
 }
